# ebay-kleinanzeigen-api

./: .dockerignore  .gitignore  DEPLOYMENT.md  Dockerfile  Dockerfile.arm64  README.MD  config.py  deploy.sh  docker-compose.yml  env.example  main.py  pyproject.toml  requirements.txt
.github/workflows/: ci.yml  docker.yml  release.yml
app/: Dockerfile  requirements.txt  server.py
app/api/: getInseratDetails.py  getViews.py  scrapeInserate.py
app/functions/: getProxy.py
libs/websites/: kleinanzeigen.py
nginx/: Dockerfile  nginx.conf
routers/: inserat.py  inserate.py  inserate_detailed.py  inserate_detailed_ultra.py  inserate_ultra.py
scrapers/: inserat.py  inserate.py  inserate_ultra_optimized.py
tests/: README.md  debug_api.py  load_test.py  run_integration_tests.py  run_load_tests.py  simple_test.py  test_api_health.py  test_integration.py  test_integration_simple.py  test_performance_validation.py
utils/: asyncio_optimizations.py  auth.py  browser.py  error_handling.py  performance.py  user_agent.py
